--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Donkfather\\OneSignal\\": "src/"
+      "Devadrianapostol\\OneSignal\\": "src/"
     }
   }
 }
